--- a/css/style.css
+++ b/css/style.css
@@ -206,10 +206,11 @@ span{
 }
 
 .about-content p{
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     line-height: 1.5;
     margin: 2rem 0 3rem;
     text-align:justify;
+    line-height:1.2;
 }
 
 
